// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography - Snapshots > matches snapshot with default props 1`] = `
<p
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  Default text
</p>
`;

exports[`Typography - Snapshots > matches snapshots for additional props 1`] = `
<p
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
  id="typography-id"
>
  Typography with ID
</p>
`;

exports[`Typography - Snapshots > matches snapshots for additional props 2`] = `
<p
  class="text-xl font-semibold text-foreground"
  data-testid="custom-typography"
>
  Typography with test ID
</p>
`;

exports[`Typography - Snapshots > matches snapshots for different HTML elements 1`] = `
<h1
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  H1 heading
</h1>
`;

exports[`Typography - Snapshots > matches snapshots for different HTML elements 2`] = `
<h2
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  H2 heading
</h2>
`;

exports[`Typography - Snapshots > matches snapshots for different HTML elements 3`] = `
<span
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  Span text
</span>
`;

exports[`Typography - Snapshots > matches snapshots for different HTML elements 4`] = `
<strong
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  Strong text
</strong>
`;

exports[`Typography - Snapshots > matches snapshots for different HTML elements 5`] = `
<em
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  Emphasized text
</em>
`;

exports[`Typography - Snapshots > matches snapshots for different children types 1`] = `
<p
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  Simple text
</p>
`;

exports[`Typography - Snapshots > matches snapshots for different children types 2`] = `
<p
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  <span>
    Complex
  </span>
   
  <em>
    typography
  </em>
   content
</p>
`;

exports[`Typography - Snapshots > matches snapshots for different configurations 1`] = `
<p
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  Default typography
</p>
`;

exports[`Typography - Snapshots > matches snapshots for different configurations 2`] = `
<p
  class="text-xl font-semibold text-foreground custom-typography"
  data-testid="typography"
>
  Custom typography
</p>
`;

exports[`Typography - Snapshots > matches snapshots for different configurations 3`] = `
<h2
  class="text-2xl font-bold text-foreground"
  data-testid="typography"
>
  Large heading
</h2>
`;

exports[`Typography - Snapshots > matches snapshots for different sizes 1`] = `
<p
  class="text-sm font-semibold text-foreground"
  data-testid="typography"
>
  Small text
</p>
`;

exports[`Typography - Snapshots > matches snapshots for different sizes 2`] = `
<p
  class="text-xl font-semibold text-foreground"
  data-testid="typography"
>
  Medium text
</p>
`;

exports[`Typography - Snapshots > matches snapshots for different sizes 3`] = `
<p
  class="text-2xl font-bold text-foreground"
  data-testid="typography"
>
  Large text
</p>
`;

exports[`Typography - Snapshots > matches snapshots for different sizes 4`] = `
<p
  class="text-4xl font-bold text-foreground"
  data-testid="typography"
>
  Extra large text
</p>
`;
